--- a/index.html
+++ b/index.html
@@ -6,26 +6,10 @@
 <body>
 <!DOCTYPE html>
 <meta charset="utf-8">
-<style>
-
-body {
-  font: 10px sans-serif;
-}
-
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-
-.dot {
-  stroke: #000;
-}
-
-</style>
+<link rel="stylesheet" type="text/css" href="style.css">
 <body>
 <script src="//d3js.org/d3.v3.min.js"></script>
+<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 <script>
 
 var margin = {top: 20, right: 20, bottom: 30, left: 40},
@@ -42,7 +26,8 @@ var color = d3.scale.category10();
 
 var xAxis = d3.svg.axis()
     .scale(x)
-    .orient("bottom");
+    .orient("bottom")
+    .tickFormat(d3.format("d"));
 
 var yAxis = d3.svg.axis()
     .scale(y)
@@ -54,7 +39,16 @@ var svg = d3.select("body").append("svg")
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-d3.csv("data.csv", function(error, data) {
+var tip = d3.tip()
+  .attr('class', 'd3-tip')
+  .offset([-10, 0])
+  .html(function(d) {
+    return "<strong>Category</strong> <span style='color:red'>" + d.category + "</span><br/><strong>Nominees</strong> <span style='color:red'>" + d.nominee + "," + d.secondarynominee+ "</span>";
+  });
+
+svg.call(tip);
+
+d3.csv("data/data.csv", function(error, data) {
   if (error) throw error;
   console.log(data);
 
@@ -63,7 +57,7 @@ d3.csv("data.csv", function(error, data) {
     d.year = +d.year;
   });
 
-  x.domain(d3.extent(data, function(d) { return d.year; })).nice();
+  x.domain([1995,2018]);
   y.domain(d3.extent(data, function(d) { return d.order; })).nice();
 
   svg.append("g")
@@ -75,7 +69,7 @@ d3.csv("data.csv", function(error, data) {
       .attr("x", width)
       .attr("y", -6)
       .style("text-anchor", "end")
-      .text("Sepal Width (cm)");
+      .text("Year");
 
   svg.append("g")
       .attr("class", "y axis")
@@ -92,10 +86,12 @@ d3.csv("data.csv", function(error, data) {
       .data(data)
     .enter().append("circle")
       .attr("class", "dot")
-      .attr("r", 3.5)
+      .attr("r", 10)
       .attr("cx", function(d) { return x(d.year); })
       .attr("cy", function(d) { return y(d.order); })
-      .style("fill", function(d) { return color(d.gender); });
+      .style("fill", function(d) { return color(d.gender); })
+      .on('mouseover', tip.show)
+      .on('mouseout', tip.hide);
 
   var legend = svg.selectAll(".legend")
       .data(color.domain())
