--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ var x = d3.scale.linear()
 var y = d3.scale.linear()
     .range([height, 0]);
 
-// grey, yellow
-var colors = ['#ececec', '#ffcc00', 'white'];
+// grey for males, yellow for females
+var colors = ['#ffcc00', '#ececec', 'white'];
 
 // Do not include a domain
 var color = d3.scale.ordinal()
@@ -34,6 +34,11 @@ var xAxis = d3.svg.axis()
     .orient("bottom")
     .tickSize(-height)
     .tickFormat(d3.format("d"));
+
+var dotRadius = function(height, maxDots) {
+  // calculate dot radius so they don't overlap
+  return (height/maxDots/2) - 1;
+}
 
 var yAxis = d3.svg.axis()
     .scale(y)
@@ -94,7 +99,8 @@ d3.csv("data/data.csv", function(error, data) {
       .data(data)
     .enter().append("circle")
       .attr("class", "dot")
-      .attr("r", 10)
+      //.attr("r", 10)
+      .attr("r", dotRadius(height, 35))
       .attr("cx", function(d) { return x(d.year); })
       .attr("cy", function(d) { return y(d.order); })
       .style("fill", function(d) { return color(d.gender); })
