formatted category names

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>The Golden Globes</title>
 </head>
 <body>
 <!DOCTYPE html>
@@ -10,8 +10,18 @@
 <body>
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+<p>Of the 25 award categories at The Golden Globes, four of them are gender-neutral, including Best Director, Best Screenplay, Best Song and Best Score. Since 1995, less than 10 percent of nominees in those categories have been women. Only 13 percent of nominated women end up taking home the award. </p>
 <h1>How often are <span style="color: #ffcc00">women</span> nominated at The Golden Globes?</h1>
-<div id="chart-container"></div>
+<span>Highlight Category</span><!-- The second value will be selected initially -->
+<select name="category-selection"> <!--Supplement an id here instead of using 'text'-->
+  <option value="all" selected>All Gender-Neutral Categories</option>
+  <option value="best-director">Best Director</option>
+  <option value="best-screenplay">Best Screenplay</option>
+  <option value="best-original-song">Best Original Song</option>
+  <option value="best-original-score">Best Original Score</option>
+</select>
+<!-- <button class="btn-default">Gender</button>
+ --><div id="chart-container"></div>
 <script src="main.js"></script>
 
 </body>
