--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <option value="best-original-song">Best Original Song</option>
   <option value="best-original-score">Best Original Score</option>
 </select>
-<!-- <button class="btn-default">Gender</button>
- --><div id="chart-container"></div>
+<button class="btn-default winner">Show winners</button>
+<div id="chart-container"></div>
 <script src="main.js"></script>
 
 </body>
