working toggle for highlighting winner

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+<h1>How often are <span style="color: #FF0064">women</span> nominated at The Golden Globes?</h1>
 <p>Of the 25 award categories at The Golden Globes, four of them are gender-neutral, including Best Director, Best Screenplay, Best Song and Best Score. Since 1995, less than 10 percent of nominees in those categories have been women. Only 13 percent of nominated women end up taking home the award. </p>
-<h1>How often are <span style="color: #ffcc00">women</span> nominated at The Golden Globes?</h1>
 <span>Highlight Category</span><!-- The second value will be selected initially -->
 <select name="category-selection"> <!--Supplement an id here instead of using 'text'-->
   <option value="all" selected>All Gender-Neutral Categories</option>
