refactored code but not sure ei love it

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 </select>
 <button class="btn-default winner">Show winners</button>
 <div id="chart-container"></div>
-<script src="main.js"></script>
-
+<script src="main-2.js"></script>
+<!-- <script src="main-2.js"></script>
+ -->
 </body>
 </html>
