--- a/index.html
+++ b/index.html
@@ -15,43 +15,44 @@
         <script src="//d3js.org/d3.v3.min.js"></script>
         <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
         <div class="container-fluid">
-          <div class="row">
-        <h1>How often are <span style="color: #FF0064">women</span> nominated at The Golden Globes?</h1>
-        <p>Of the 25 award categories at The Golden Globes, four of them are gender-neutral, including Best Director, Best Screenplay, Best Song and Best Score. Since 1995, less than 10 percent of nominees in those categories have been women. Only 11 percent of nominated women end up taking home the award. </p>
-        <p>Highlight Category</p>
-        <!--DROPDOWN FOR MOBILE-->
-       <!--  <select name="category-selection">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1><span style="color: #FF0064">Women</span> are underrepresented at The Golden Globes</h1>
+                    <p>Of the 25 award categories at The Golden Globes, four of them are gender-neutral, including <span class="category-highlight">Best Director</span>, <span class="category-highlight">Best Screenplay</span>, <span class="category-highlight">Best Song</span> and <span class="category-highlight">Best Score</span>. Since 1995, less than 10 percent of nominees in those categories have been women. Only 11 percent of nominated women end up taking home the award. </p>
+                    <p>Highlight Category</p>
+                    <!--DROPDOWN FOR MOBILE-->
+                    <!--  <select name="category-selection">
             <option value="all" selected>All Gender-Neutral Categories</option>
             <option value="best-director">Best Director</option>
             <option value="best-screenplay">Best Screenplay</option>
             <option value="best-original-song">Best Original Song</option>
             <option value="best-original-score">Best Original Score</option>
         </select> -->
-
-        <!--BUTTONS FOR DESKTOP-->
-        <div class="btn-toolbar" role="toolbar">
-            <div class="btn-group btn-group-sm category-selection" role="group" aria-label="Category options">
-                <button type="button" class="btn btn-default" value="all">All</button>
-                <button type="button" class="btn btn-default" value="best-director">Best Director</button>
-                <button type="button" class="btn btn-default" value="best-screenplay">Best Screenplay</button>
-                <button type="button" class="btn btn-default" value="best-original-song">Best Original Song</button>
-                <button type="button" class="btn btn-default" value="best-original-score">Best Original Score</button>
+                    <!--BUTTONS FOR DESKTOP-->
+                    <div class="btn-toolbar" role="toolbar">
+                        <div class="btn-group btn-group-sm category-selection" role="group" aria-label="Category options">
+                            <button type="button" class="btn btn-default" value="all">All</button>
+                            <button type="button" class="btn btn-default" value="best-director">Best Director</button>
+                            <button type="button" class="btn btn-default" value="best-screenplay">Best Screenplay</button>
+                            <button type="button" class="btn btn-default" value="best-original-song">Best Original Song</button>
+                            <button type="button" class="btn btn-default" value="best-original-score">Best Original Score</button>
+                        </div>
+                        <div class="btn-group btn-group-sm" role="group" aria-label="Show or hide winners">
+                            <button type="button" class="btn btn-default winner">Show winners</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- CHART GOES HERE -->
+                <div class="row">
+                    <div class="col-md-12">
+                    </div>
+                    <div id="chart-container">
+                        <div id="chart"></div>
+                    </div>
+                </div>
             </div>
-            <div class="btn-group btn-group-sm" role="group" aria-label="Show or hide winners">
-                <button type="button" class="btn btn-default winner">Show winners</button>
-            </div>
-        </div>
-</div>
-        <!-- CHART GOES HERE -->
-        <div class="row">
-          <div id="chart-container">
-            <div id="chart"></div>
-        </div>
-        </div>
-
-        </div>
-        <script src="main.js"></script>
-        <!-- <script src="main-2.js"></script>
+            <script src="main.js"></script>
+            <!-- <script src="main-2.js"></script>
  -->
     </body>
 
