--- a/index.html
+++ b/index.html
@@ -17,20 +17,28 @@
     <body>
         <script src="//d3js.org/d3.v3.min.js"></script>
         <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+        <!--   <svg height="5" width="5" xmlns="http://www.w3.org/2000/svg" version="1.1">
+            <defs>
+                <pattern id="lightstripe" patternUnits="userSpaceOnUse" width="5" height="5">
+                    <image xlink:href="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc1JyBoZWlnaHQ9JzUnPgogIDxyZWN0IHdpZHRoPSc1JyBoZWlnaHQ9JzUnIGZpbGw9J3doaXRlJy8+CiAgPHBhdGggZD0nTTAgNUw1IDBaTTYgNEw0IDZaTS0xIDFMMSAtMVonIHN0cm9rZT0nIzg4OCcgc3Ryb2tlLXdpZHRoPScxJy8+Cjwvc3ZnPg==" x="0" y="0" width="5" height="5"> </image>
+                </pattern>
+            </defs>
+        </svg> -->
+        <svg height="5" width="5" xmlns="http://www.w3.org/2000/svg" version="1.1">
+            <defs>
+                <pattern id="lightstripe" patternUnits="userSpaceOnUse" width="5" height="5">
+                    <rect width='5' height='5' fill='#eca0a6'/>
+                    <line x1="0" y1="5" x2="5" y2="0" stroke-width="1" stroke="white" />
+                </pattern>
+            </defs>
+        </svg>
         <div id="wrapper">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
                         <h3><span style="color: #eca0a6">Women</span> are underrepresented at The Golden Globes</h3>
-                        <!-- <p>Of the 25 award categories at The Golden Globes, four of them are gender-neutral, including <span class="category-highlight">Best Director</span>, <span class="category-highlight">Best Screenplay</span>, <span class="category-highlight">Best Song</span> and <span class="category-highlight">Best Score</span>.</p>
-                        <ul>
-                            <li>In the last 20 years, no woman has won for Best Director or Best Original Score</li>
-                            <li>The Best Original Song category has had the highest percentage of female nominees (19%) and winners (14%).</li>
-                            <li>While only 7% of nominees for The Best Original Screenplay category are women, 9% of the winners are.</li>
-                            <li>Both Best Orignal Song and Best Original Screenplay boast a larger percentage of female nominee and winners but unlike Best Director, nominees tend to be writing teams, rather than individuals.</li>
-                        </ul> -->
                         <!--DROPDOWN FOR MOBILE-->
-         <!--                 <select name="category-selection">
+                        <!--                 <select name="category-selection">
             <option value="all" selected>All Gender-Neutral Categories</option>
             <option value="best-director">Best Director</option>
             <option value="best-screenplay">Best Screenplay</option>
@@ -38,7 +46,7 @@
             <option value="best-original-score">Best Original Score</option>
         </select>  -->
                         <!--BUTTONS FOR DESKTOP-->
-                        <div class="btn-toolbar category-selection" role="toolbar">
+                        <div class="btn-toolbar category-selection" role="toolbar">Test
                             <div class="btn-group btn-group-sm" role="group" aria-label="Category options">
                                 <button type="button" class="btn btn-default selected" value="all">All</button>
                                 <button type="button" class="btn btn-default" value="best-director">Best Director</button>
@@ -46,12 +54,9 @@
                                 <button type="button" class="btn btn-default" value="best-original-song">Best Original Song</button>
                                 <button type="button" class="btn btn-default" value="best-original-score">Best Original Score</button>
                             </div>
-                            <div class="btn-group btn-group-sm" role="group" aria-label="Show or hide winners">
-                                <button type="button" class="btn btn-default winner">Show winners</button>
-                            </div>
                         </div>
                         <div class="annotation">Since 1995, less than 12 percent of nominees in those categories have been women. Only 14 percent of nominated women end up taking home the award.</div>
-                        <div class='stats'>Female nominees: <span class="stat-highlight nominees">11%</span> | Female winners:  <span class="stat-highlight winners">8%</span></div>
+                        <div class='stats'>Female nominees: <span class="stat-highlight nominees">11%</span>  Female winners: <span class="stat-highlight winners">8%</span></div>
                     </div>
                     <!-- CHART GOES HERE -->
                     <div class="row">
