--- a/index.html
+++ b/index.html
@@ -17,18 +17,12 @@
     <body>
         <script src="//d3js.org/d3.v3.min.js"></script>
         <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-        <!--   <svg height="5" width="5" xmlns="http://www.w3.org/2000/svg" version="1.1">
-            <defs>
-                <pattern id="lightstripe" patternUnits="userSpaceOnUse" width="5" height="5">
-                    <image xlink:href="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc1JyBoZWlnaHQ9JzUnPgogIDxyZWN0IHdpZHRoPSc1JyBoZWlnaHQ9JzUnIGZpbGw9J3doaXRlJy8+CiAgPHBhdGggZD0nTTAgNUw1IDBaTTYgNEw0IDZaTS0xIDFMMSAtMVonIHN0cm9rZT0nIzg4OCcgc3Ryb2tlLXdpZHRoPScxJy8+Cjwvc3ZnPg==" x="0" y="0" width="5" height="5"> </image>
-                </pattern>
-            </defs>
-        </svg> -->
+
         <svg height="5" width="5" xmlns="http://www.w3.org/2000/svg" version="1.1">
             <defs>
                 <pattern id="lightstripe" patternUnits="userSpaceOnUse" width="5" height="5">
                     <rect width='5' height='5' fill='#eca0a6' />
-                    <line x1="0" y1="5" x2="5" y2="0" stroke-width="1" stroke="white" />
+                    <line x1="0" y1="5" x2="5" y2="0" stroke-width="2" stroke="#a53a4f" />
                 </pattern>
             </defs>
         </svg>
@@ -36,8 +30,8 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3><span style="color: #eca0a6">Women</span> who have been nominated for a Golden Globe <span style="font-weight: normal;">(1995-2018)</span></h3>
-                        
+                        <h2>Women Who Have Been Nominated for a Golden Globe <span class="headline-date">(1995-2018)</span></h2>
+
                         <!--  <p class="annotation">Since 1995, 11% percent of nominees in The Golden Globes four gender-neutral categories have been women. Only 8 percent of women end up taking home the award.</p> -->
                         <!--DROPDOWN FOR MOBILE-->
                         <!--                 <select name="category-selection">
