--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <defs>
                 <pattern id="lightstripe" patternUnits="userSpaceOnUse" width="5" height="5">
                     <rect width='5' height='5' fill='#eca0a6' />
-                    <line x1="0" y1="5" x2="5" y2="0" stroke-width="2" stroke="#a53a4f" />
+                    <line x1="0" y1="5" x2="5" y2="0" stroke-width="1" stroke="#a53a4f" />
                 </pattern>
             </defs>
         </svg>
@@ -32,7 +32,7 @@
                     <div class="col-md-12">
                         <h2>Women Who Have Been Nominated for a Golden Globe <span class="headline-date">(1995-2018)</span></h2>
 
-                        <!--  <p class="annotation">Since 1995, 11% percent of nominees in The Golden Globes four gender-neutral categories have been women. Only 8 percent of women end up taking home the award.</p> -->
+                        <!--  <p class="annotation">Since 1995, 11% percent of movies in The Golden Globes four gender-neutral categories have been women. Only 8 percent of women end up taking home the award.</p> -->
                         <!--DROPDOWN FOR MOBILE-->
                         <!--                 <select name="category-selection">
             <option value="all" selected>All Gender-Neutral Categories</option>
@@ -53,16 +53,8 @@
                             </div>
                         </div>
                         <div class='stats'>
-                            <span class="nominees">Nominees <span class="stat-highlight">11%</span></span>
-                            <span class="winners">Winners <span class="stat-highlight">8%</span></span>
-                        </div>
-
-                        <div class="legend">
-                            <ul>
-                                <li><span class="legend-key female-nom"></span>female nominees</li>
-                                <li><span class="legend-key female-win"></span>female winners</li>
-                                <li><span class="legend-key male"></span>male nominees/winners</li>
-                            </ul>
+                            <span class="nominees">Female nominees <span class="stat-highlight">11%</span></span>
+                            <span class="winners">Female winners <span class="stat-highlight">8%</span></span>
                         </div>
                     </div>
                     <!-- CHART GOES HERE -->
@@ -73,6 +65,14 @@
                             <div id="chart"></div>
                         </div>
                     </div>
+
+                        <div class="legend">
+                            <ul>
+                                <li><span class="legend-key female-nom"></span>female nominees</li>
+                                <li><span class="legend-key female-win"></span>female winners</li>
+                                <li><span class="legend-key male"></span>male nominees/winners</li>
+                            </ul>
+                        </div>
                 </div>
             </div>
             <script src="main.js"></script>
