--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <svg height="5" width="5" xmlns="http://www.w3.org/2000/svg" version="1.1">
             <defs>
                 <pattern id="lightstripe" patternUnits="userSpaceOnUse" width="5" height="5">
-                    <rect width='5' height='5' fill='#ea626d' />
+                    <rect width='5' height='5' fill='#e81760' />
                     <line x1="0" y1="5" x2="5" y2="0" stroke-width="1" stroke="#eca0a6" />
    </pattern>
             </defs>
