local copy of d3 tip

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <body>
         <script src="//d3js.org/d3.v3.min.js"></script>
-        <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+        <script src="js/d3.tip.v0.6.3.js"></script>
         <svg height="5" width="5" xmlns="http://www.w3.org/2000/svg" version="1.1">
             <defs>
                 <pattern id="lightstripe" patternUnits="userSpaceOnUse" width="5" height="5">
@@ -29,18 +29,10 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>Women Who Have Been Nominated for a Golden Globe <span class="headline-date">(1994-2018)</span></h2>
-                        <!--  <p class="annotation">Since 1995, 11% percent of movies in The Golden Globes four gender-neutral categories have been women. Only 8 percent of women end up taking home the award.</p> -->
-                        <!--DROPDOWN FOR MOBILE-->
-                        <!--                 <select name="category-selection">
-            <option value="all" selected>All Gender-Neutral Categories</option>
-            <option value="best-director">Best Director</option>
-            <option value="best-screenplay">Best Screenplay</option>
-            <option value="best-original-song">Best Original Song</option>
-            <option value="best-original-score">Best Original Score</option>
-        </select>  -->
+                        <h1>Female Golden Globe Nominees of the Past 25 Years <br /><span class="headline-date">(1994-2018)</span></h1>
+                     
                         <!--BUTTONS FOR DESKTOP-->
-                        <p style="color: #0a0a0a; clear: both">Highlight women within category</p>
+                       
                         <div class="btn-toolbar category-selection" role="toolbar">
                             <div class="btn-group btn-group-sm" role="group" aria-label="Category options">
                                 <button type="button" class="btn btn-default selected" value="all">All</button>
