--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <script src="//d3js.org/d3.v3.min.js"></script>
         <script src="js/d3.tip.v0.6.3.js"></script>
-        <svg height="5" width="5" xmlns="http://www.w3.org/2000/svg" version="1.1">
+        <svg height="5" width="5" xmlns="https://www.w3.org/2000/svg" version="1.1">
             <defs>
                 <pattern id="lightstripe" patternUnits="userSpaceOnUse" width="5" height="5">
                     <rect width='5' height='5' fill='#e81760' />
