--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1>Female Golden Globe Nominees of the Past 25 Years <br /><span class="headline-date">(1994-2018)</span></h1>
-                     
+
                         <!--BUTTONS FOR DESKTOP-->
-                       
+
                         <div class="btn-toolbar category-selection" role="toolbar">
                             <div class="btn-group btn-group-sm" role="group" aria-label="Category options">
                                 <button type="button" class="btn btn-default selected" value="all">All</button>
@@ -62,6 +62,7 @@
                     </div>
                 </div>
             </div>
+        </div>
             <script src="main.js"></script>
             <!-- <script src="main-2.js"></script>
  -->
